# PaperProbe

./: .env.example  .gitignore  LICENSE.txt  README.md  paperprobe_analysis_basic.md  pyproject.toml
.github/workflows/: ruff.yml
src/core/: Logger.py  llm_service.py  task_manager.py
src/github_repo/: github_repo.py
src/preprocessing_utilities/: github_link_extractor.py  pdf_parser.py
src/tool_providers/: code_analysis_tools_provider.py  file_system_tools_provider.py  github_stats_tools_provider.py  tool_provider_base.py  venv_tools_provider.py
src/ui/: app.py  controller.py  entry_point.py  mock.py  sample.md  style.tcss
