[project]
name = "paperprobe"
version = "0.1.0"
description = "Tool to automatically generate scripts that show usage of scientific code from scientific papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitpython>=3.1.45",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pdfminer-six>=20251107",
    "ruff>=0.14.6",
]
