[project]
name = "paperprobe"
version = "0.2.0"
description = "Tool to automatically generate scripts that show usage of scientific code from scientific papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitpython>=3.1.45",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pipreqs>=0.5.0",
    "pygithub>=2.1.1",
    "pymupdf>=1.26.6",
    "ruff>=0.14.6",
    "textual>=6.6.0",
]

[project.scripts]
paperprobe = "src.ui.entry_point:paperprobe"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
installer = "uv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
